Created the Enquire page

--- a/Alva Childminding/src/enquire.html
+++ b/Alva Childminding/src/enquire.html
@@ -7,6 +7,11 @@
     <title>Alva Childminding Service</title>
     <link rel="icon" type="image/x-icon" href="../resource/img/rainbow.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .activated {
+            background-color: rgb(74 222 128);
+        }
+    </style>
 </head>
 
 <body>
@@ -130,7 +135,7 @@
 
             <!--Child Information-->
             <section class="mx-8 my-20 p-8 overflow-hidden shadow-xl bg-green-400 rounded-lg">
-                <h3 class="text-3xl mb-4">Child Informaiton</h3>
+                <h3 class="text-3xl mb-4">Child Information</h3>
                 <div class="p-8 flex flex-wrap items-center border-2 border-green-600 rounded-xl">
                     <div class="w-[60%] pr-4">
                         <label for="childName">Child's name</label>
@@ -151,17 +156,22 @@
                     <div class="w-full py-4">
                         <!--Allergy information-->
                         <label for="allergy">Known allergies?</label>
-                        <select name="allergies?" id="allergy" class="w-48 bg-green-100 p-2">
+                        <select name="allergies?" id="allergyMenu" class="w-48 bg-green-100 p-2">
                             <option value="0">Choose...</option>
                             <option value="1">No</option>
                             <option value="2">Yes</option>
                         </select>
                         <div class="w-[90%] p-4 m-auto my-8 bg-slate-700 bg-opacity-30">
+                            <div id="allergiesSelected">
 
-                            <div class="gap-4 my-4 p-4 flex flex-wrap justify-center">
+                            </div>
+
+                            <div class="gap-4 my-4 p-4 flex-wrap justify-center hidden" id="allergySelector">
 
                                 <article
-                                    class="h-32 w-32 p-6 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-6 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer 
+                                    activated">
                                     <input type="checkbox" id="pollen" class="hidden">
                                     <svg class="w-10 h-10" fill="#000000" version="1.1" id="Layer_1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -200,7 +210,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-6 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-6 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="dust" class="hidden">
                                     <svg class="w-10 h-10" width="800px" height="800px" viewBox="0 0 512 512"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -233,7 +244,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="pets" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -262,7 +274,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="spores" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -275,7 +288,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="insects" class="hidden">
                                     <svg height="40px" width="40px" version="1.1" id="_x32_"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -374,7 +388,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="latex" class="hidden">
                                     <svg fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -415,7 +430,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="dairy" class="hidden">
                                     <svg fill="#000000" width="40px" height="40px" viewBox="-33.86 0 122.88 122.88"
                                         version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -441,7 +457,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="egg" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 0 48 48"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -458,7 +475,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="peanuts" class="hidden">
                                     <svg height="40px" width="40px" version="1.1" id="_x32_"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -543,7 +561,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="treenuts" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 0 24 24" version="1.1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -561,7 +580,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="soy" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 0 24 24" version="1.1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -579,7 +599,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="wheat" class="hidden">
                                     <svg fill="#000000" width="40px" height="40px" viewBox="0 0 24 24"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -593,7 +614,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="fish" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 -0.5 25 25" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -605,7 +627,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="shellfish" class="hidden">
                                     <svg height="40px" width="40px" version="1.1" id="_x32_"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -660,7 +683,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="sesame" class="hidden">
                                     <svg width="40px" height="40px" viewBox="0 0 512 512"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -671,7 +695,8 @@
                                 </article>
 
                                 <article
-                                    class="h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
+                                    class="allergyCard
+                                    h-32 w-32 p-4 flex flex-col justify-between items-center bg-green-600 border-2 border-black rounded-lg shadow-lg hover:bg-green-300 cursor-pointer">
                                     <input type="checkbox" id="mustard" class="hidden">
                                     <svg fill="#000000" height="40px" width="40px" version="1.1" id="Capa_1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -690,10 +715,6 @@
                                 </article>
 
                             </div>
-
-                            <input type="text" placeholder="Write here if the allergy wasn't included earlier. "
-                                class="py-1 px-2 w-full h-16 bg-green-100 align align-top">
-
                         </div>
                     </div>
 
@@ -793,5 +814,43 @@
         </footer>
     </div>
 
+    <script>
+        //Allergies menu
+        document.getElementById('allergyMenu').addEventListener('change', function () {
 
+            if (document.getElementById('allergyMenu').value == 2) {
+                document.getElementById('allergySelector').style.display = 'flex'
+            } else {
+                document.getElementById('allergySelector').style.display = 'none'
+            }
+        })
+
+        //Allergies Card management
+        const allergyList = document.querySelectorAll('.allergyCard')
+        const allergiesTags = set()
+
+            //Add a tag to the set
+        addAllergySet = function (allergyLabel) {
+            allergiesTags.add(allergyLabel)
+            document.getElementById('allergiesSelected').innerHTML = allergiesTags
+        }
+
+            //Remove a tag from the set
+        deleteAllergySet = function (allergyLabel) {
+            allergiesTags.delete(allergyLabel)
+            document.getElementById('allergiesSelected').innerHTML = allergiesTags
+        }
+
+            //Manage the click on a card
+        console.log(allergyList)
+        allergyList.forEach(element => {
+            element.addEventListener('click', function () {
+                console.log('Click')
+                //const allergyLabel = label.textContent
+                //console.log('Value: ' + label.textContent)
+            })
+        });
+
+
+    </script>
 </body>
